<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context=".SignupActivity">

    <EditText
        android:drawablePadding="@dimen/_5sdp"
        android:id="@+id/signup_name"
        style="@style/medium_18_edit"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/name_hint"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_below="@id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawablePadding="@dimen/_5sdp"
        android:drawableLeft="@drawable/email_img"
        android:id="@+id/signup_email"
        style="@style/medium_18_edit"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_below="@id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawablePadding="@dimen/_5sdp"
        android:drawableLeft="@drawable/contactno_icon"
        android:id="@+id/signup_contactno"
        style="@style/medium_18_edit"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/contact_hint"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_below="@id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/signup_password"
        style="@style/medium_18_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_email"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/password_img"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_confirm_password"
        style="@style/medium_18_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_email"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/password_img"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:editable="false"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableRight="@drawable/ic_baseline_calendar_today_24"
        android:id="@+id/signup_date_of_birth"
        style="@style/medium_18_edit"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:hint="@string/signup_date_of_birth"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_below="@id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/signup_gender"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:buttonTint="@color/black"
        android:id="@+id/signup_male"
        android:text="Male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:buttonTint="@color/black"
        android:id="@+id/signup_female"
        android:text="Female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:buttonTint="@color/black"
        android:id="@+id/signup_transgender"
        android:text="Transgender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="2"
            style="@style/bold_20_text"
            android:text="City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:background="@color/grey"
            android:id="@+id/signup_city"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:layout_gravity="center"
        style="@style/bold_20_button"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_password"
        android:id="@+id/signup_button"
        android:text="SignUp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"/>
</LinearLayout>